--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,11 @@
 /* You can add global styles to this file, and also import other style files */
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body
+{
+    background-image: url('https://www.w3schools.com/css/mountain.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+
+}
