--- a/src/app/components/course-details/course-Details.component.html
+++ b/src/app/components/course-details/course-Details.component.html
@@ -19,12 +19,12 @@
         <table mat-table [dataSource]="sessionsByCourseId" class="mat-elevation-z8">
             <ng-container matColumnDef="startDateTime">
                 <th mat-header-cell *matHeaderCellDef> Start Date Time </th>
-                <td mat-cell *matCellDef="let element"> {{ element.startDateTime }} </td>
+                <td mat-cell *matCellDef="let element">{{formatDateTime(element.startDateTime)}}</td>
             </ng-container>
 
             <ng-container matColumnDef="endDateTime">
                 <th mat-header-cell *matHeaderCellDef> End Date Time</th>
-                <td mat-cell *matCellDef="let element"> {{ element.endDateTime }} </td>
+                <td mat-cell *matCellDef="let element"> {{formatDateTime(element.endDateTime)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="title">
@@ -66,4 +66,4 @@
             </mat-expansion-panel>
         </mat-accordion>
     </div>
-</div>
+</div> -->
