--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -2,10 +2,10 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="collapse navbar-collapse" id="navbarColor03">
             <ul class="navbar-nav mr-auto">
-                <li class="nav-item active" >
+                <!-- <li class="nav-item active" >
                     <a class="nav-link" (click)="goTo('class')">Class</a>
                     <span></span>
-                </li>
+                </li> -->
                 <li class="nav-item" >
                     <a class="nav-link" (click)="goTo('course')">Course</a>
                     <span></span>
