--- a/src/app/components/session-view/session-view.component.html
+++ b/src/app/components/session-view/session-view.component.html
@@ -1,15 +1,17 @@
-<div class="container" style="display: flex;">
-    
-    <div style="width: 50%;">
+<div class="container" style="display: flex;height: 900px; ">
+    <div style="height: fit-content; ">
+        <mat-icon (click)="this.getData()" style=" cursor: pointer; ">refresh</mat-icon>
+    </div>
+    <div style="width: 50%;flex-wrap: wrap;display: flex;flex-direction: column;height: 70%;margin-right: 90px;">
         <ng-container *ngFor="let item of arrayOfSessions">
             <mat-card style=" width: 50%; margin-bottom: 10px;margin-left: 10px; ">
-                <mat-card-header (click)="this.joinSession(item.id)">
+                <mat-card-header (click)="this.joinSession(item)">
                     <mat-card-title [style.color]="'rgb(80, 184, 219)'">
-                        <div class="hover-underline" style="">{{item.title}}</div>
+                        <div class="hover-underline" >{{item.title}}</div>
                     </mat-card-title>
-                    <mat-card-subtitle>Dog Breed</mat-card-subtitle>
+                    <mat-card-subtitle>{{item.course['course_Name']}}</mat-card-subtitle>
                 </mat-card-header>
-                <div>
+                <div style="display: flex;"> 
                     <div style="width: 50%;margin-right: 5%;margin-left: 1%; height: fit-content;">
                         <mat-card-content>
                             <div>
@@ -18,11 +20,12 @@
                             </div>
                         </mat-card-content>
                     </div>
+                    <div>	
+                        <mat-icon *ngIf="item.isSessionActive">mic</mat-icon>
+                    </div>
                 </div>
             </mat-card>
         </ng-container>
     </div>
-    <div>
-        <mat-icon (click)="this.getData()">refresh</mat-icon>
-    </div>
+    
 </div>
