--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,6 @@ html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 body
 {
-    background-image: url('https://www.w3schools.com/css/mountain.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
-
+    background-image: url('assets/beanstalk.png');
+    
 }
