--- a/src/app/components/course-details/course-Details.component.html
+++ b/src/app/components/course-details/course-Details.component.html
@@ -15,21 +15,26 @@
     <input matInput  type="email"  disabled value="true">
 </mat-form-field> -->
 <div class="container">
-    <div class="sessionsTable" style="width: 50%; margin:20px;">
+    <div class="sessionsTable" style="width: 60%; margin:20px;">
         <table mat-table [dataSource]="sessionsByCourseId" class="mat-elevation-z8">
             <ng-container matColumnDef="startDateTime">
-                <th mat-header-cell *matHeaderCellDef> Start Date Time </th>
-                <td mat-cell *matCellDef="let element">{{formatDateTime(element.startDateTime)}}</td>
+                <th mat-header-cell *matHeaderCellDef style="color: red !important; text-align: center !important;">
+                    Start Date Time </th>
+                <td mat-cell *matCellDef="let element" style="text-align: center !important;">
+                    {{formatDateTime(element.startDateTime)}}</td>
             </ng-container>
 
-            <ng-container matColumnDef="endDateTime">
-                <th mat-header-cell *matHeaderCellDef> End Date Time</th>
-                <td mat-cell *matCellDef="let element"> {{formatDateTime(element.endDateTime)}} </td>
+            <ng-container matColumnDef="endDateTime" style="display: flex; justify-content: center;">
+                <th mat-header-cell *matHeaderCellDef style="color: red !important; text-align: center !important;"> End
+                    Date Time</th>
+                <td mat-cell *matCellDef="let element" style="text-align: center !important;">
+                    {{formatDateTime(element.endDateTime)}} </td>
             </ng-container>
 
             <ng-container matColumnDef="title">
-                <th mat-header-cell *matHeaderCellDef> Session Title </th>
-                <td mat-cell *matCellDef="let element"> {{ element.title }} </td>
+                <th mat-header-cell *matHeaderCellDef style="color: red !important; text-align: center !important;">
+                    Session Title </th>
+                <td mat-cell *matCellDef="let element" style="text-align: center !important;"> {{ element.title }} </td>
             </ng-container>
 
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -44,12 +49,12 @@
                 <mat-expansion-panel-header>
                     <div style=" display: flex; justify-content: space-between; width: 80%; ">
                         <mat-panel-title>
-                            <div style=" min-width: 100px; max-width: 200px; ">
+                            <div style="width: 200px; ">
                                 {{student.fName}} {{student.lName}}
                             </div>
                         </mat-panel-title>
                         <mat-panel-description>
-                            <mat-label style="color: blue; margin-right: 5px;"> Student Id </mat-label> {{student.id}}
+                            <mat-label style="color:blue; margin-right: 5px;">Student ID</mat-label> {{student.id}}
                         </mat-panel-description>
                     </div>
                 </mat-expansion-panel-header>
@@ -59,11 +64,10 @@
                         <input matInput Student Email="Age" [disabled]="true" value="{{student.email}}">
                     </mat-form-field>
                     <div *ngIf="student.face">
-                        <img [src]="student.face.faceEncoding" style="max-height: 200px;">
+                        <img [src]="student.face.faceEncoding" style="max-height: 200px; max-width: 250px;">
                     </div>
                 </div>
-
             </mat-expansion-panel>
         </mat-accordion>
     </div>
-</div> 
+</div>
