--- a/src/app/components/course-view/course-view.component.html
+++ b/src/app/components/course-view/course-view.component.html
@@ -22,23 +22,23 @@
 
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
     <ng-container matColumnDef="course_Code">
-        <th mat-header-cell *matHeaderCellDef> Course Code </th>
-        <td mat-cell *matCellDef="let element"> {{ element.course_Code }} </td>
+        <th mat-header-cell *matHeaderCellDef style="color:black !important;text-align: center !important;"> Course Code </th>
+        <td mat-cell *matCellDef="let element" style="color:grey !important;text-align: center !important;"> {{ element.course_Code }} </td>
     </ng-container>
 
     <ng-container matColumnDef="course_Name">
-        <th mat-header-cell *matHeaderCellDef> Course Name </th>
-        <td mat-cell *matCellDef="let element"> {{ element.course_Name }} </td>
+        <th mat-header-cell *matHeaderCellDef style="color:black !important;text-align: center !important;"> Course Name </th>
+        <td mat-cell *matCellDef="let element" style="color:grey !important;text-align: center !important;"> {{ element.course_Name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="course_Instructor">
-        <th mat-header-cell *matHeaderCellDef> Course Instructor </th>
-        <td mat-cell *matCellDef="let element"> {{ element.course_Instructor }} </td>
+        <th mat-header-cell *matHeaderCellDef style="color:black !important;text-align: center !important;"> Course Instructor </th>
+        <td mat-cell *matCellDef="let element" style="color:grey !important;text-align: center !important;"> {{ element.course_Instructor }} </td>
     </ng-container>
 
     <ng-container matColumnDef="course_Description">
-        <th mat-header-cell *matHeaderCellDef> Course Description </th>
-        <td mat-cell *matCellDef="let element"> {{ element.course_Description }} </td>
+        <th mat-header-cell *matHeaderCellDef style="color:black !important;"> Course Description </th>
+        <td mat-cell *matCellDef="let element"style="color:grey !important;"> {{ element.course_Description }} </td>
     </ng-container>
     <!-- Add more ng-container sections for additional columns if needed -->
     <ng-container matColumnDef="events">
