--- a/src/app/components/join-session/join-session.component.html
+++ b/src/app/components/join-session/join-session.component.html
@@ -61,10 +61,9 @@
        
 
     </mat-card>
-    <div style="margin-left: 25px;">
+    <div style="margin-left: 25px;display: flex;flex-direction: column;">
         <video #videoElement></video>
-        <div *ngIf="this.videoFlag"></div>
-        <button  mat-raised-button (click)="stopVideo()">Stop Video</button>
+        <button  mat-raised-button (click)="capture()" style="margin-top: 20px; background: rgb(254,199,1);">Check In</button>
     </div>
 </div>
 
