--- a/src/app/components/course-view/course-view.component.html
+++ b/src/app/components/course-view/course-view.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<!-- <app-navbar></app-navbar> -->
 <!-- <div class="container">
     <button *ngFor="let course of arrayOfCourses" class="courseData" (click)="reDirect(course)">
         <div>
