--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -7,7 +7,7 @@
                     <span></span>
                 </li> -->
                 <li class="nav-item" >
-                    <a class="nav-link" (click)="goTo('course')">Course</a>
+                    <a class="nav-link" (click)="goTo('courseNav')">Course</a>
                     <span></span>
                 </li>
                 <li class="nav-item" > 
